Fix validation warnings

--- a/experiments.html
+++ b/experiments.html
@@ -56,7 +56,7 @@
 
         <section aria-labelledby="canvas-demo-heading">
             <h2 id="canvas-demo-heading">Canvas</h2>
-            <canvas id="exp-canvas" width="360" height="180" aria-label="Sample drawing"></canvas>
+            <canvas id="exp-canvas" width="360" height="180"></canvas>
         </section>
 
         <section aria-labelledby="template-demo-heading">
