--- a/gallery.html
+++ b/gallery.html
@@ -64,7 +64,7 @@
                 </video>
             </p>
             <p>
-                <canvas id="demo-canvas" width="320" height="120" aria-label="Decorative canvas"></canvas>
+                <canvas id="demo-canvas" width="320" height="120"></canvas>
             </p>
         </section>
 
