Add one semantic CSS custom element

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         </article>
     </main>
 
+    <note-box role="note" aria-label="Site note" variant="warning">
+        This is a CSS-only custom element example placed on the home page.
+    </note-box>
+
     <footer>
         <ul>
             <li><a href="https://github.com/jialinzhang010" target="_blank">Github</a></li>
