--- a/experience.html
+++ b/experience.html
@@ -24,42 +24,42 @@
 
     <main>
         <section>
-            <h2 id="experience-list-heading" class="visually-hidden">Experience list</h2>
+            <h2Experience list</h2>
 
-            <article>
-                <figure>
-                    <img src="https://via.placeholder.com/360x220?text=Company+Logo" alt="Company logo" width="360"
-                        height="220" />
-                    <figcaption class="visually-hidden">Company Logo</figcaption>
-                </figure>
-                <header>
-                    <h3>Job title</h3>
-                </header>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis.
-                </p>
-            </article>
+                <article>
+                    <figure>
+                        <img src="https://via.placeholder.com/360x220?text=Company+Logo" alt="Company logo" width="360"
+                            height="220" />
+                        <figcaption>Company Logo</figcaption>
+                    </figure>
+                    <header>
+                        <h3>Job title</h3>
+                    </header>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis.
+                    </p>
+                </article>
 
-            <article>
-                <figure>
-                    <img src="https://via.placeholder.com/360x220?text=Company+Logo" alt="Company logo" width="360"
-                        height="220" />
-                    <figcaption class="visually-hidden">Company Logo</figcaption>
-                </figure>
-                <header>
-                    <h3>Job title</h3>
-                </header>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis.
-                </p>
-            </article>
+                <article>
+                    <figure>
+                        <img src="https://via.placeholder.com/360x220?text=Company+Logo" alt="Company logo" width="360"
+                            height="220" />
+                        <figcaption>Company Logo</figcaption>
+                    </figure>
+                    <header>
+                        <h3>Job title</h3>
+                    </header>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis.
+                    </p>
+                </article>
         </section>
     </main>
 
-    <section aria-labelledby="contact-form-heading">
-        <h2 id="contact-form-heading" class="visually-hidden">Contact form</h2>
+    <section>
+        <h2>Contact form</h2>
         <form action="#" method="post">
             <fieldset>
                 <legend>Get in touch</legend>
