--- a/experiments.html
+++ b/experiments.html
@@ -54,22 +54,22 @@
             </video>
         </section>
 
-        <section aria-labelledby="canvas-demo-heading">
-            <h2 id="canvas-demo-heading">Canvas</h2>
+        <section>
+            <h2>Canvas</h2>
             <canvas id="exp-canvas" width="360" height="180"></canvas>
         </section>
 
-        <section aria-labelledby="template-demo-heading">
-            <h2 id="template-demo-heading">Template</h2>
+        <section>
+            <h2>Template</h2>
             <div id="cards"></div>
-            <template id="card-template">
-                <article class="card">
+            <template>
+                <article>
                     <h3>Card Title</h3>
                     <p>This content was cloned from a &lt;template&gt;.</p>
                 </article>
             </template>
             <p>
-                <button id="add-card" type="button">Add Card</button>
+                <button type="button">Add Card</button>
             </p>
         </section>
     </main>
