--- a/gallery.html
+++ b/gallery.html
@@ -23,8 +23,8 @@
     </header>
 
     <main>
-        <section aria-labelledby="photo-grid-heading">
-            <h2 id="photo-grid-heading" class="visually-hidden">Photo grid</h2>
+        <section>
+            <h2>Photo grid</h2>
 
             <figure>
                 <img src="https://via.placeholder.com/640x360?text=Photo+1" alt="Photo 1" width="640" height="360" />
@@ -47,8 +47,8 @@
             </figure>
         </section>
 
-        <section aria-labelledby="media-extras-heading">
-            <h2 id="media-extras-heading" class="visually-hidden">Media extras</h2>
+        <section>
+            <h2>Media extras</h2>
             <p>
                 <audio controls>
                     <source src="https://www.w3schools.com/html/horse.ogg" type="audio/ogg" />
@@ -64,16 +64,16 @@
                 </video>
             </p>
             <p>
-                <canvas id="demo-canvas" width="320" height="120"></canvas>
+                <canvas width="320" height="120"></canvas>
             </p>
         </section>
 
-        <section aria-labelledby="dialog-demo-heading">
-            <h2 id="dialog-demo-heading" class="visually-hidden">Dialog demo</h2>
+        <section>
+            <h2>Dialog demo</h2>
             <p>
-                <button id="open-dialog">Open Info</button>
+                <button>Open Info</button>
             </p>
-            <dialog id="info-dialog">
+            <dialog>
                 <p>Thanks for visiting the gallery!</p>
                 <form method="dialog">
                     <button>Close</button>
