--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="assets/images/profile-placeholder.jpg" alt="My Photo" />
             <figcaption>My Photo</figcaption>
         </figure>
-        <article id="about">
+        <article>
             <h2>About me</h2>
             <div>
                 <p>
