--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,8 @@
     </header>
 
     <main>
-        <section aria-labelledby="project-list-heading">
-            <h2 id="project-list-heading" class="visually-hidden">Project list</h2>
+        <section>
+            <h2>Project list</h2>
 
             <article>
                 <figure>
@@ -37,7 +37,7 @@
                         <img src="https://via.placeholder.com/360x220?text=Project+image" alt="Project thumbnail"
                             width="360" height="220" />
                     </picture>
-                    <figcaption class="visually-hidden">Project image</figcaption>
+                    <figcaption>Project image</figcaption>
                 </figure>
                 <header>
                     <h3>Project title</h3>
